// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`path should nest with nested records 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [
      "a",
      "b",
    ],
    "received": "number",
  },
]
`;

exports[`should not parse arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received an array",
    "path": [],
    "received": "array",
  },
]
`;

exports[`should not parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received a string",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should not parse null 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should not parse records with invalid keys 1`] = `
[
  {
    "code": "invalid_literal",
    "expected": "a",
    "message": "Expected "a", received a string",
    "path": [
      "b",
    ],
    "received": "string",
  },
]
`;

exports[`should not parse records with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [
      "b",
    ],
    "received": "number",
  },
]
`;
